--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Try778</string>
+    <string name="note_hint">My note...</string>
+    <string name="button_save_label">Save</string>
 </resources>
