--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Note</string>
-    <string name="note_hint">My note...</string>
+    <string name="note_hint">My note…</string>
     <string name="button_save_label">Save</string>
+    <string name="button_delete_item_label">Delete item</string>
 </resources>
